選択肢入力フォーム追加